@startuml
skinparam defaultFontName "Noto Sans CJK SC"
skinparam defaultFontSize 14
title 支付单状态图

state "待支付" as PENDING
state "已审批" as APPROVED
state "支付成功" as SUCCESS
state "支付失败" as FAILED

[*] --> PENDING : 创建支付单（用户端充值）
PENDING --> APPROVED : 管理员审核通过
PENDING --> FAILED : 管理员审核拒绝
APPROVED --> SUCCESS : 系统模拟回调处理成功\n（校验HMAC → 标记SUCCESS → 加余额 → 补扣欠费）
APPROVED --> FAILED : 系统模拟回调处理失败
PENDING --> SUCCESS : 支付回调成功 / 签名校验通过（旧流程兼容）

note top of PENDING : 充值时支付单初始状态，\n等待管理员审批
note bottom of APPROVED : 管理员已批准，\n等待模拟回调处理
note bottom of SUCCESS : 终态，余额已更新
note bottom of FAILED : 终态，支付未完成

note right of FAILED : 自动扣费场景同样遵循以上状态流转\n扣费产生的支付单 PENDING -> SUCCESS 成功\n若自动扣费 FAILED\ncharge_records.deduction_status 标记为 arrears\n由定时任务或用户充值后触发补充扣费
@enduml